# tfg-paddel

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  environment.yml  requirements-dev.txt  requirements.txt  setup.py  test_environment.py  tox.ini  train.py
.github/workflows/: run-coverage.yml  run-tests.yml  run-typecheck.yml
api/: Dockerfile  requirements.txt
app/: Makefile  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  sample.env
app/api/: .gitignore  Dockerfile  requirements.txt
app/db/: Dockerfile  init.sql
app/proxy/: Caddyfile  Dockerfile  production.conf
doc/: anexos.tex  memoria.tex
docs/: Makefile  anexos.tex  memoria.tex  refs.bib
notebooks/: .gitignore  00-file_features.ipynb  00-main.ipynb  00-train.ipynb  01-file_features_and_landmarks.ipynb  01-plots.ipynb  01-poses.ipynb  01-preprocessing.ipynb  02-classic_features.ipynb  02-model.ipynb  02-time_series.ipynb  03-bayes.ipynb  04-tsfresh_features.ipynb  05-training.ipynb  mediapipe.ipynb  plots.ipynb  preprocessing.ipynb
paddel/: .gitignore  Makefile  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
paddel/notebooks/: 01-file_features_and_landmarks.ipynb  01-preprocessing.ipynb  02-classic_features.ipynb  preprocessing.ipynb
paddel/notebooks/trials/: extract_landmarks.ipynb
paddel/src/paddel/: __init__.py  config.py  decorators.py  enums.py  exceptions.py  plots.py  types.py  utilities.py
paddel/src/paddel/hyper_parameters/: parameters.py  parser.py
paddel/src/paddel/plots/: __init__.py
paddel/src/paddel/preprocessing/: __init__.py  classic.py  cleaning.py  data.py  dataframes.py  datagetter.py  features.py  filename.py  filename_features.py  image_landmark_extraction.py  interim.py  landmark.py  landmarks.py  poses.py  time_series.py  transformer.py  video.py  video_landmark_extraction.py
paddel/src/paddel/preprocessing/input/: classic.py  data.py  features.py  fresh.py  misc.py  poses.py  time_series.py  video.py
paddel/tests/: test_config.py  test_filename_features.py  test_landmark_extraction.py  test_video.py
proxy/: Dockerfile  Dockerfile.development  default.conf
pruebas/: .gitignore  extract_landmarks.ipynb  mediapipe.ipynb
tests/: Paddel.side  test_config.py  test_filename_features.py  test_landmark_extraction.py
web/: Dockerfile  package-lock.json  package.json  vite.config.ts
(+128 files in other folders)
