[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "paddel"
version = "0.0.2"
requires-python = "~=3.9"
dependencies = [
    "numpy~=1.24.1",
    "pandas~=1.5.2",
    "scipy~=1.10.0",
    "scikit-learn~=1.2.1",
    "mediapipe~=0.9.0.1",
    "opencv-python~=4.7.0.68",
]

[project.optional-dependencies]
dev = [
    "mypy~=0.991",
    "black~=22.12.0",
    "isort~=5.12.0",
    "autoflake~=2.0.1",
]

[tool.mypy]
plugins = ["numpy.typing.mypy_plugin"]

[tool.black]
target-version = ['py39']

[tool.isort]
profile = "black"

[tool.autoflake]
recursive = true
in-place = true
remove-all-unused-imports = true
remove-unused-variables = true
ignore-init-module-imports = true