[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "paddel"
version = "0.0.2"
requires-python = "~=3.9"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "scikit-learn",
    "imbalanced-learn",
    "pydantic",
    "mediapipe",
    "opencv-python",
    "tsfresh"
]

[project.optional-dependencies]
dev = [
    "mypy",
    "black",
    "isort",
    "autoflake",
]

[tool.mypy]
plugins = ["numpy.typing.mypy_plugin"]

[tool.isort]
profile = "black"

[tool.autoflake]
recursive = true
in-place = true
remove-all-unused-imports = true
remove-unused-variables = true
ignore-init-module-imports = true
