[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "paddel"
version = "0.0.2"
requires-python = "~=3.9"
dependencies = [
    "numpy~=1.23.5",
    "pandas~=1.5.3",
    "scipy~=1.10.1",
    "scikit-learn~=1.2.2",
    "imbalanced-learn~=0.10.1",
    "pydantic~=1.10.7",
    "mediapipe~=0.9.2.1",
    "opencv-python~=4.7.0.72",
    "tsfresh~=0.20.0",
    "matrixprofile~=1.1.10",
    "xgboost~=1.7.5",
    "scikit-optimize~=0.9.0",
]

[project.optional-dependencies]
dev = [
    "mypy",
    "black",
    "isort",
    "autoflake",
]

[tool.mypy]
plugins = ["numpy.typing.mypy_plugin"]

[tool.isort]
profile = "black"

[tool.autoflake]
recursive = true
in-place = true
remove-all-unused-imports = true
remove-unused-variables = true
ignore-init-module-imports = true
